--- a/macos-build/Brewfile
+++ b/macos-build/Brewfile
@@ -1,8 +1,8 @@
 tap "homebrew/core"
 tap "homebrew/bundle"
-tap "caskroom/versions"
-tap "caskroom/cask"
-cask "java8"
+tap "homebrew/homebrew-cask"
+tap "homebrew/cask-versions"
+cask "java"
 brew "dos2unix"
 brew "git"
 brew "gradle"
